--- a/LanguageWeaverProvider/PluginResources.resx
+++ b/LanguageWeaverProvider/PluginResources.resx
@@ -117,6 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lwLogoIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\lwLogoIco.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lwLogoPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\lwLogoPng.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="MainView_CloseButton" xml:space="preserve">
     <value>Close app</value>
   </data>
