--- a/ApplyStudioProjectTemplate/Sdl.Community.ApplyStudioProjectTemplate/PluginResources.resx
+++ b/ApplyStudioProjectTemplate/Sdl.Community.ApplyStudioProjectTemplate/PluginResources.resx
@@ -205,4 +205,10 @@
   <data name="QuestionIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\questionicon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AABT_Failed" xml:space="preserve">
+    <value>Failed to set the Automation Analysis Batch Task</value>
+  </data>
+  <data name="APTBT_Failed" xml:space="preserve">
+    <value>Failed to set the Automation Pre-translate Batch Task</value>
+  </data>
 </root>
