--- a/GoogleCloudTranslationProvider/PluginResources.resx
+++ b/GoogleCloudTranslationProvider/PluginResources.resx
@@ -505,11 +505,11 @@ Path: {0}</value>
   <data name="Database_PluginName_V3" xml:space="preserve">
     <value>googlecloudadvanced</value>
   </data>
-  <data name="LMP_Button_Cancel" xml:space="preserve">
-    <value>Cancel</value>
+  <data name="LMP_Button_CloseApp" xml:space="preserve">
+    <value>Close</value>
   </data>
-  <data name="LMP_Button_Ok" xml:space="preserve">
-    <value>OK</value>
+  <data name="LMP_Button_ApplyChanges" xml:space="preserve">
+    <value>Apply</value>
   </data>
   <data name="LMP_Button_Reset" xml:space="preserve">
     <value>Reset to default</value>
