SDLCOM-2935: DeepL - Add glossary support (#1369)
* Implement MVVM

* UI: Implement separate language pair settings

* Implement separate settings functionality

* Refactoring

* Refactoring

* Fix Tell Me action

* UI: Implement Glossary Import Window

* GlossariesViewModel TsvReader: replace instantiation with injection

* Inject instead of initialize

* Add ErrorHandler class: provides a way to get rid of try catch blocks and provides a uniform way of creating error messages
Add Enumerable extension: .ForEach instead of foreach
GlossaryWindow: CheckAll glossaries

* UI: Add DeleteGlossary, Export Glossary
 - uniform error handling

* Export functionality: CSV, TSV
SDLCOM-4305

* Glossaries view: Implement filtering

* DeepLWindow: Add "Manage glossaries" for specific project glossaries

* Fix minor issues

* UI: EditGlossary window

* UI: improve EditGlossary

* Minor issue fixed

* UI enhancement

* UI: ProgressRing instead of bar
 - other fixes: bug when modified glossary and then switched between datagrid selections

* Add backup

* Improve UI
 - fix keyboard shortcuts issues
 - add filtering

* Delete ImportGlossary action

* Fix issue: don't let user submit invalid entries

* Fix TellMe action

--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/PluginResources.resx
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/PluginResources.resx
@@ -176,4 +176,10 @@ This feature currently works for all target languages except "ES" (Spanish), "JA
   <data name="DeeplTranslationProviderScheme" xml:space="preserve">
 	  <value>deepltranslationprovider:///</value>
   </data>
+  <data name="NoGlossary" xml:space="preserve">
+	  <value>No glossary</value>
+  </data>
+  <data name="AllLanguagePairs_Label" xml:space="preserve">
+    <value>All language pairs</value>
+  </data>
 </root>
