--- a/LanguageWeaverProvider/PluginResources.resx
+++ b/LanguageWeaverProvider/PluginResources.resx
@@ -117,6 +117,126 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Auth_ChangeAuthType" xml:space="preserve">
+    <value>Change authentication type</value>
+  </data>
+  <data name="Auth_Cloud_ClientID" xml:space="preserve">
+    <value>Cliend ID</value>
+  </data>
+  <data name="Auth_Cloud_ClientSecret" xml:space="preserve">
+    <value>Client Secret</value>
+  </data>
+  <data name="Auth_Cloud_Credentials" xml:space="preserve">
+    <value>User credentials</value>
+  </data>
+  <data name="Auth_Cloud_Secrets" xml:space="preserve">
+    <value>User secrets</value>
+  </data>
+  <data name="Auth_Cloud_SSO" xml:space="preserve">
+    <value>Single sign-on</value>
+  </data>
+  <data name="Auth_Cloud_UserID" xml:space="preserve">
+    <value>User ID</value>
+  </data>
+  <data name="Auth_Cloud_UserPw" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="Auth_SignIn" xml:space="preserve">
+    <value>Sign in</value>
+  </data>
+  <data name="CloudMappingView_Headers_Dictionaries" xml:space="preserve">
+    <value>Dictionary</value>
+  </data>
+  <data name="CloudMappingView_Headers_LOs" xml:space="preserve">
+    <value>Linguistic options</value>
+  </data>
+  <data name="CloudMappingView_Headers_Models" xml:space="preserve">
+    <value>Model</value>
+  </data>
+  <data name="CloudMappingView_Headers_Pairs" xml:space="preserve">
+    <value>Language pair</value>
+  </data>
+  <data name="CloudMappingView_Headers_Source" xml:space="preserve">
+    <value>Source</value>
+  </data>
+  <data name="CloudMappingView_Headers_Target" xml:space="preserve">
+    <value>Target</value>
+  </data>
+  <data name="CloudMappingView_Values_NotSet" xml:space="preserve">
+    <value>Not set</value>
+  </data>
+  <data name="CloudMappingView_Values_Unavailable" xml:space="preserve">
+    <value>Not available</value>
+  </data>
+  <data name="Connection_Credentials" xml:space="preserve">
+    <value>Credentials</value>
+  </data>
+  <data name="Connection_Error_Failed" xml:space="preserve">
+    <value>Authentication process failed</value>
+  </data>
+  <data name="Connection_Error_FirstFail" xml:space="preserve">
+    <value>Connection unsuccessful. Attempting retry...</value>
+  </data>
+  <data name="Connection_Error_NoCredentials" xml:space="preserve">
+    <value>Please provide your credentials</value>
+  </data>
+  <data name="Connection_Loading_Connecting" xml:space="preserve">
+    <value>Connecting user...</value>
+  </data>
+  <data name="Connection_Loading_Initiating" xml:space="preserve">
+    <value>Initiating...</value>
+  </data>
+  <data name="ErrorView_Buttons_Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
+  <data name="ErrorView_Buttons_HideDetails" xml:space="preserve">
+    <value>Hide details</value>
+  </data>
+  <data name="ErrorView_Buttons_SaveReport" xml:space="preserve">
+    <value>Save report</value>
+  </data>
+  <data name="ErrorView_Buttons_ShowDetails" xml:space="preserve">
+    <value>Show details</value>
+  </data>
+  <data name="LMPViewModel_ResetTitle" xml:space="preserve">
+    <value>Reset to defaults</value>
+  </data>
+  <data name="LMPViewModel_ResetWarning" xml:space="preserve">
+    <value>Warning: Resetting to default values!
+All changes will be lost and the database will be restored to its original state.
+
+This action cannot be undone.</value>
+  </data>
+  <data name="LMPView_Buttons_ApplyChanges" xml:space="preserve">
+    <value>Apply</value>
+  </data>
+  <data name="LMPView_Buttons_Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
+  <data name="LMPView_Buttons_Reset" xml:space="preserve">
+    <value>Reset to defaults</value>
+  </data>
+  <data name="LMPView_Headers_Language" xml:space="preserve">
+    <value>Language</value>
+  </data>
+  <data name="LMPView_Headers_LanguageCode" xml:space="preserve">
+    <value>Language code</value>
+  </data>
+  <data name="LMPView_Headers_Region" xml:space="preserve">
+    <value>Region</value>
+  </data>
+  <data name="LMPView_Headers_TradosCode" xml:space="preserve">
+    <value>Trados code</value>
+  </data>
+  <data name="LMPView_Languages_Filtered" xml:space="preserve">
+    <value>; Filtered:</value>
+  </data>
+  <data name="LMPView_Languages_TotalCount" xml:space="preserve">
+    <value>Total languages:</value>
+  </data>
+  <data name="LMPView_SearchBox" xml:space="preserve">
+    <value>Search language...</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="lwLogoIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\lwLogoIco.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -124,14 +244,29 @@
   <data name="lwLogoPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\lwLogoPng.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MainView_AuthMethods_BackBttn" xml:space="preserve">
+    <value>Back</value>
+  </data>
+  <data name="MainView_AuthMethods_HelpMessage" xml:space="preserve">
+    <value>Please select the method you'd like to use to log in. You might be asked to use your credentials into the next step.</value>
+  </data>
+  <data name="MainView_Buttons_Exit" xml:space="preserve">
+    <value>Exit</value>
+  </data>
+  <data name="MainView_Buttons_LWCloud" xml:space="preserve">
+    <value>Language Weaver</value>
+  </data>
+  <data name="MainView_Buttons_LWEdge" xml:space="preserve">
+    <value>LW Edge (coming soon)</value>
+  </data>
   <data name="MainView_CloseButton" xml:space="preserve">
     <value>Close app</value>
   </data>
   <data name="MainView_ConfirmButton" xml:space="preserve">
     <value>Confirm</value>
   </data>
-  <data name="MainView_HelpButton" xml:space="preserve">
-    <value>Help</value>
+  <data name="MainView_HelpMessage" xml:space="preserve">
+    <value>Tap the button below to choose between Language Weaver, designed for general translation needs, and Language Weaver Edge, specialized for enhanced business translation.</value>
   </data>
   <data name="NameOf_CommandParameterI_MissingComponent" xml:space="preserve">
     <value>Could not find the property ['{0}'] in ['{1}'], please check the spelling for both the property and the class or if any of the two had its name changed in both C# class and XAML.</value>
@@ -141,7 +276,43 @@
 "{[location_of_NameOf]:NameOf Member=[PropertyName], Type={x:Type[classLocation:ClassName]}}"
 Your values should go inside each [], eg: [PropertyName] =&gt; ProjectId</value>
   </data>
+  <data name="PairMappingView_Buttons_Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="PairMappingView_Buttons_Confirm" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
+  <data name="PairMappingView_Buttons_OpenLMP" xml:space="preserve">
+    <value>Open Language Mapping</value>
+  </data>
+  <data name="PairMappingView_Buttons_Settings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="PairModel_Dictionary_NotSelected" xml:space="preserve">
+    <value>No dictionary selected</value>
+  </data>
+  <data name="PairModel_Dictionary_Unavailable" xml:space="preserve">
+    <value>No dictionary available</value>
+  </data>
+  <data name="PairModel_Model_Unavailable" xml:space="preserve">
+    <value>No model available</value>
+  </data>
   <data name="Plugin_Name" xml:space="preserve">
     <value>Language Weaver Provider</value>
+  </data>
+  <data name="SettingsView_BackButton_LeftContent" xml:space="preserve">
+    <value>←</value>
+  </data>
+  <data name="SettingsView_BackButton_RightContent" xml:space="preserve">
+    <value>Back</value>
+  </data>
+  <data name="SettingsView_Drafts" xml:space="preserve">
+    <value>Resend drafts for translation</value>
+  </data>
+  <data name="SettingsView_Tags" xml:space="preserve">
+    <value>Include tags in translation</value>
+  </data>
+  <data name="TranslationDraftNotResent" xml:space="preserve">
+    <value>[segment already translated...source not re-sent]</value>
   </data>
 </root>
