--- a/ProjectTerms/Sdl.Community.ProjectTerms.Plugin/PluginResources.resx
+++ b/ProjectTerms/Sdl.Community.ProjectTerms.Plugin/PluginResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Constant_ProjectType" xml:space="preserve">
-    <value>_project</value>
+    <value>InternalProject</value>
   </data>
   <data name="Constant_ProjectTypeContent" xml:space="preserve">
     <value>SingleFile</value>
