--- a/InterpretBank/InterpretBank/PluginResources.resx
+++ b/InterpretBank/InterpretBank/PluginResources.resx
@@ -145,4 +145,7 @@
   <data name="AddTerm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\AddTerm.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CommitToDb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CommitToDb.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
