--- a/Multilingual.Excel.FileType/Multilingual.Excel.FileType/Verifier/SettingsUI/VerifcationSettings.resx
+++ b/Multilingual.Excel.FileType/Multilingual.Excel.FileType/Verifier/SettingsUI/VerifcationSettings.resx
@@ -138,4 +138,14 @@
         gg==
 </value>
   </data>
+  <data name="pictureBox_maxLineLengthInfo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAORJREFUOE+t
+        k7ENgzAUROnoMgAL0FAxDtNQ0lAxR7bJAKnTpaRK7n2dHRETRUQ56Um+8/+WbUz1d43j2IhJXMRqGJM1
+        LtuXCgZxE7PoRW0YkzE3uHwrJsRVdPatPbTOOvvtIgrYNqtHM9J4EQ+zOE6LUPs6jgznm21D8sUOkqgV
+        k20EXFJv+1XU0mMbATdd24bkz4Lt3x1lUStW248LnETcgaMsasVmgd0j0Ay2WdTSYxtBcYmIZrDNopYe
+        2wj2PmM+AmPH5OVnRAreH1JqzrtgTpQPKYkJwerHn3KSCn7/mY6rqp6WMOmk0wpEigAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
 </root>
