--- a/InterpretBank/InterpretBank/PluginResources.resx
+++ b/InterpretBank/InterpretBank/PluginResources.resx
@@ -139,9 +139,6 @@
     <value>Use the following glossaries:</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="AddTerm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\AddTerm.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -150,5 +147,8 @@
   </data>
   <data name="Booth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Booth.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IB" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\IB.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
