--- a/GoogleCloudTranslationProvider/PluginResources.resx
+++ b/GoogleCloudTranslationProvider/PluginResources.resx
@@ -140,7 +140,7 @@
     <comment>Line3</comment>
   </data>
   <data name="Plugin_Name" xml:space="preserve">
-    <value>Google Translator Provider</value>
+    <value>Google Cloud Translation Provider</value>
   </data>
   <data name="Plugin_Description" xml:space="preserve">
     <value>Google Translator Provider Plugin - Choose between V2 or V3 - Description</value>
@@ -547,5 +547,11 @@ This action cannot be undone.</value>
   </data>
   <data name="sourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\sourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="documentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\documentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellmeDocumentation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
